--- a/MedMon/res/layout/activity_next.xml
+++ b/MedMon/res/layout/activity_next.xml
@@ -4,4 +4,13 @@
     android:layout_height="match_parent"
     tools:context="${packageName}.${activityClass}" >
 
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/medicineSetUp"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
 </RelativeLayout>
